// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnswersContainer render snapshot: renders correct default 1`] = `
<div
  className="answers-container border border-light-700 rounded py-4 pl-4 pr-3"
>
  <Button
    className={null}
    onClick={[MockFunction]}
    text={null}
    variant="add"
  >
    <FormattedMessage
      defaultMessage="Add answer"
      description="Button text to add answer"
      id="authoring.answerwidget.answer.addAnswerButton"
    />
  </Button>
</div>
`;

exports[`AnswersContainer render snapshot: renders correctly with answers 1`] = `
<div
  className="answers-container border border-light-700 rounded py-4 pl-4 pr-3"
>
  <Component
    answer={
      Object {
        "correct": true,
        "id": "a",
        "title": "sOMetITlE",
      }
    }
    hasSingleAnswer={false}
    key="a"
  />
  <Component
    answer={
      Object {
        "correct": true,
        "id": "b",
        "title": "sOMetITlE",
      }
    }
    hasSingleAnswer={false}
    key="b"
  />
  <Button
    className={null}
    onClick={[MockFunction]}
    text={null}
    variant="add"
  >
    <FormattedMessage
      defaultMessage="Add answer"
      description="Button text to add answer"
      id="authoring.answerwidget.answer.addAnswerButton"
    />
  </Button>
</div>
`;
